2010-08-23  Ryuan Choi  <ryuan.choi@samsung.com>

Reviewed by Antonio Gomes.

        [EFL] rendering was broken when missing plugin.
        https://bugs.webkit.org/show_bug.cgi?id=43395

        Implement RenderThemeEfl::systemFont to render "Missing plugin" when we
        don't have proper plugin.
        In this case, RenderEmbeddedObject::paintReplaced call systemFont and
        pass returned font to GraphicsContext.

        * platform/efl/RenderThemeEfl.cpp:
        (WebCore::RenderThemeEfl::setDefaultFontSize):
        (WebCore::RenderThemeEfl::systemFont):
        * platform/efl/RenderThemeEfl.h:

Canonical link: https://commits.webkit.org/56592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65813 268f45cc-cd09-0410-ab3c-d52691b4dbfc